[Sport] ajout de la route pour get all
