# app/account/sport/Sport.route.ts
@@ -1,0 +1,5 @@
+import * as express from "express";
+import { SportController } from "./Sport.controller"
+
+export const SportRoute: express.Router = express.Router()
+    .get("/", SportController.All);
