# config/Router.ts
@@ -4,7 +4,8 @@ import { UserRoute } from "../app/account/user/User.route";
 import { ProfileRoute } from "../app/account/profile/Profile.route";
 import { MatchRoute } from "../app/tunnel/match/Match.route";
 import { TeamRoute } from "../app/tunnel/team/Team.route";
-import { ScoreRoute } from "../app/score/score/Score.route"
+import { ScoreRoute } from "../app/score/score/Score.route";
+import { SportRoute } from "../app/account/sport/Sport.route"
 import { config } from "../config";
 
 interface IROUTER {
@@ -39,4 +40,8 @@ export const ROUTER: IROUTER[] = [ {
     handler: ScoreRoute,
     middleware: [],
     path: "/score",
+}, {
+    handler: SportRoute,
+    middleware: [],
+    path: "/sport",
 }];
